objects/Contact.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Level__c</fullName>
        <description>1. Top level management, consists of Board of directors, managing directors or executive committee members, C-suite, officers.
 
2. Middle level management, consists of managers such as personnel, production, sales, marketing, resource, finance, general manager, etc.
 
3. Lower or operating level management, consists of foreman, supervisors, daily labourers etc.</description>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Top Management</fullName>
                </value>
                <value>
                    <fullName>Middle Management</fullName>
                </value>
                <value>
                    <fullName>Lower Management</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check INACTIVE when a contact has left the company, so all related fields stay in SF - but the contact isn&apos;t used going forward.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeemAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to subscribe contact to Deem alerts.</description>
        <inlineHelpText>Check box to subscribe contact to Deem alerts.</inlineHelpText>
        <label>Deem Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>LEGACY_ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zeno_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zeno Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COPY_Region__c</fullName>
        <formula>TEXT(Account.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COPY Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_E_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Insert checkmark if the contact is associated with the company&apos;s meetings &amp; events.  Note: The assumption is contacts are tied to business travel, unless this field is marked.</inlineHelpText>
        <label>M&amp;E Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Phone__c</fullName>
        <label>Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GDPR_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box when this specific contacts gives &quot;consent&quot; to receive email/messages from Direct Travel.</description>
        <inlineHelpText>Check this box when this specific contacts gives &quot;consent&quot; to receive email/messages from Direct Travel.</inlineHelpText>
        <label>GDPR Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MICE_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MICE Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certify_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certify Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behavior_Score__c</fullName>
        <description>Receives the behavioral portion of the lead score from Marketo.</description>
        <inlineHelpText>Marketing Interest Score based on person&apos;s interaction with marketing activities.</inlineHelpText>
        <label>Behavior Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <description>Indicates where in the lead lifecycle model the Contact is at currently.</description>
        <inlineHelpText>Disposition the person based on qualification or disqualification as a viable lead to create an opportunity. Marketing Engaged and Marketing Qualified values should only be set by the system.</inlineHelpText>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crisis24_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to indicate this contact has ADMIN access to the GardaWorld/Crisis24 DOC Portal.  Note: up to 3 people can be designated at each company, without charge.  Having 4 or more Admins is a billable item.</inlineHelpText>
        <label>Crisis24 Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GetThere_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GetThere Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Navigator_Blog__c</fullName>
        <description>Subscription picklist with default as Blank (meaning not addressed), Subscribed or Unsubscribed</description>
        <inlineHelpText>Customers &amp; Prospects can subscribe. It’s time to cut through the noise. How do you rise above the competing voices, infinite information, and endless options? You need an aerial view. Join us as we share industry insights and best practices to help travel buyers become smarter; tips and tricks to make the business travel life a little easier; and ways to make that well-earned vacation unforgettable. No matter what your goal is, we’re here to help you navigate your way.</inlineHelpText>
        <label>Navigator Blog</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscribed</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recycle_Reason__c</fullName>
        <description>Indicates why the lead or contact was sent to the Recycled state.</description>
        <inlineHelpText>Pick the reason that best fits the reason for recycling this lead. Recycle will allow the person to be contacted by marketing/sales in the future to re-engage. If the person should never be contacted again, please select &quot;Disqualified&quot; as the Contact Status.</inlineHelpText>
        <label>Recycle Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contact_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Recycle_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this for contacts who need to be notified of IT-related security news or alerts - i.e., a supplier credit card breach, or other data breaches. FYI, all PRIMARY contacts will also be included in these types of communications.</inlineHelpText>
        <label>IT Security Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Air_Owner__c</fullName>
        <inlineHelpText>Who in DT&apos;s Group Air department owns this contact relationship?</inlineHelpText>
        <label>Group Air Owner</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box indicates this contact is the primary business travel contact for the account.</description>
        <inlineHelpText>Checking this box indicates this contact is the primary business travel contact for the account.</inlineHelpText>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_to_Marketo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sync to Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SAP_Concur_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAP Concur Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avenir_Newsletter__c</fullName>
        <label>Avenir Newsletter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscribed</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COPY_Account_Type__c</fullName>
        <formula>TEXT(Account.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COPY Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COPY_Crisis24_URL__c</fullName>
        <formula>Account.Crisis24_GardaWorld_URL__c</formula>
        <label>COPY Crisis24 URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demographic_Score__c</fullName>
        <description>Receives the demographic portion of the lead score from Marketo.</description>
        <inlineHelpText>Marketing Qualification Score based on Company and Person Demographics.</inlineHelpText>
        <label>Demographic Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Air_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this contact is tied to the Group Air business...</inlineHelpText>
        <label>Group Air Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M_E_Contact_Owner__c</fullName>
        <inlineHelpText>Who in DT&apos;s M&amp;E department owns this contact relationship?</inlineHelpText>
        <label>M&amp;E Contact Owner</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_News_Brief__c</fullName>
        <label>Travel News Brief</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscribed</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COPY_Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName &amp; &quot; &quot; &amp; Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COPY Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Crisis_Comm__c</fullName>
        <description>Contacts that will recieve DT Core Client Crisis Communications</description>
        <inlineHelpText>CORE CLIENTS ONLY - Identify contacts who should receive DT Core Client Crisis Communications (supplementary messaging beyond C24 when the Crisis Communication process has been implemented).</inlineHelpText>
        <label>Client Crisis Comm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscribed</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <inlineHelpText>Please name the specific source.</inlineHelpText>
        <label>Lead Source Detail</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Concur_Notices__c</fullName>
        <inlineHelpText>Select Yes for contacts who are NOT SAP Concur Admins who need to receive technology notices, updates, or outage information.   Yes = Subscribe | Opt-Out = Remove</inlineHelpText>
        <label>SAP Concur Notices</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Opt-Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disqualified_Reason__c</fullName>
        <description>Indicates why a lead or contact was disqualified by SDR or Sales.</description>
        <inlineHelpText>Pick the reason that best represents why you are disqualifying the lead. For those that could be contacted by marketing/sales in the future, please select &quot;Recycle&quot; instead of &quot;Disqualified&quot;.</inlineHelpText>
        <label>Disqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contact_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Disqualified_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uniglobe_ProspectID__c</fullName>
        <description>Temp Field for Uniglobe migration</description>
        <label>Uniglobe_ProspectID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Customers or Prospects can get the latest business travel news, resources for your corporate travel program, and useful tips in your inbox every month with our marketing newsletter.</inlineHelpText>
        <label>Corporate Travel News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Specific_Travel__c</fullName>
        <description>Select the best option for this contact&apos;s role specific to the decision to manage travel. Only one option is allowed per contact.</description>
        <inlineHelpText>Select the best option for this contact&apos;s role specific to the &quot;decision to manage travel&quot; at their company. Only one option is allowed per contact.</inlineHelpText>
        <label>Role Specific to Travel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Gatekeeper</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Referrer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Digit_Contact_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18-Digit Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this on the record for the contact who is responsible for the new account implementation.</description>
        <inlineHelpText>Check this on the record for the contact who is responsible for the new account implementation.</inlineHelpText>
        <label>Implementation Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesloft_Person_Stage__c</fullName>
        <label>Salesloft Person Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Closed- Converted</fullName>
                </value>
                <value>
                    <fullName>Closed- Not Converted</fullName>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Replied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_PT_SF_Contact_ID__c</fullName>
        <label>Legacy PT SF Contact ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Owner_Contact_Owner__c</fullName>
        <description>Formula field that compares the Account Owner to the Contact Owner and indicates if it is a Match or Mismatch</description>
        <formula>IF( Account.OwnerId =  OwnerId , &quot;Match&quot;, &quot;Mismatch&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Owner Contact Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Select_Newsletter__c</fullName>
        <label>Direct Select Newsletter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscribed</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_Preference_French__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Subscriber prefers subscriptions in French</inlineHelpText>
        <label>Language Preference: French</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CASL_consent_email_marketing__c</fullName>
        <description>Canadian Anti-Spam Law -  If you&apos;re in Canada or send to Canadian residents, you need to comply with CASL.</description>
        <inlineHelpText>In compliance with Canadian Anti-Spam Law (CASL).</inlineHelpText>
        <label>CASL consent email marketing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Navigator_Blog_Canada_French__c</fullName>
        <inlineHelpText>Customers &amp; Prospects can subscribe.  FRENCH - for Canada Contacts. ​It’s time to cut through the noise. How do you rise above the competing voices, infinite information, and endless options? You need an aerial view. Join us as we share industry insights and best practices to help travel buyers become smarter; tips and tricks to make the business travel life a little easier; and ways to make that well-earned vacation unforgettable. No matter what your goal is, we’re here to help you navigate your way</inlineHelpText>
        <label>Navigator Blog - Canada French</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscribed</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deduplication_Archived_Values__c</fullName>
        <description>RingLead Dedup Field This field will serve as an archive of information in the event we need to rebuild merged records There is no reverse button, merged records will need to be rebuilt.</description>
        <label>Deduplication Archived Values</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Marketing_Newsletter_Canada_French__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Customers &amp; Prospects can get the latest business travel news, resources for your corporate travel program, and useful tips in your inbox every month with our corporate newsletter.  FRENCH version for Canada customers.</inlineHelpText>
        <label>Corporate Travel News - Canada French</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>Lead_Source_Original</fullName>
        <active>false</active>
        <description>Rule to stop users from changing original lead source.</description>
        <errorConditionFormula>AND 
( 
NOT(ISBLANK(PRIORVALUE( LeadSource ))) , 
 ISCHANGED( LeadSource  ))</errorConditionFormula>
        <errorDisplayField>LeadSource</errorDisplayField>
        <errorMessage>Do not change original lead source.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Status_Recycle_Reason_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL( Contact_Status__c , &apos;Recycle&apos;),
 ISBLANK( TEXT (Recycle_Reason__c ) 
))</errorConditionFormula>
        <errorMessage>Please select a Recycle Reason when the Contact Status is set to Recyle.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Status_Disqualified_Reason_Requi</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL( Contact_Status__c , &apos;Disqualified&apos;),
 ISBLANK( TEXT (Disqualified_Reason__c ) 
))</errorConditionFormula>
        <errorMessage>Please select a Disqualified Reason when the Contact Status is set to Disqualified.</errorMessage>
    </validationRules>
</CustomObject>